test/classes/initializers/errors/name-bad-field.good
name-bad-field.chpl:6: In initializer:
name-bad-field.chpl:7: error: field "b" used before it is initialized
